# pybp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
Scripts/: run.sh
bp/: handle.py  utility.py
core/: __init__.py  handle.py  jobs.py  utility.py
tests/: test.py
